--- a/rl_gazebo_robots/CMakeLists.txt
+++ b/rl_gazebo_robots/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(rl-gazebo-robots)
+project(rl_gazebo_robots)
 cmake_policy(SET CMP0054 NEW)
 
 ## Compile as C++11, supported in ROS Kinetic and newer
