--- a/rl_gazebo/package.xml
+++ b/rl_gazebo/package.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0"?>
 <package>
-  <name>metahast</name>
+  <name>rl_gazebo</name>
   <version>0.0.0</version>
-  <description>The metahast</description>
+  <description>The rl_gazebo</description>
   <maintainer email="todo@todo.todo">benjamin</maintainer>
   <license>BSD</license>
   <buildtool_depend>catkin</buildtool_depend>
-  <run_depend>hast_gazebo_msgs</run_depend>
-  <run_depend>message_to_tf</run_depend>
-  <run_depend>robot_descriptions</run_depend>
-  <run_depend>robot_plugins</run_depend>
+  <run_depend>rl_gazebo_msgs</run_depend>
+  <run_depend>rl_msg_to_tf</run_depend>
+  <run_depend>rl_gazebo_robots</run_depend>
+  <run_depend>rl_gazebo_plugins</run_depend>
 
   <export>
     <metapackage/>
