--- a/rl_gazebo_msgs/package.xml
+++ b/rl_gazebo_msgs/package.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
 <package>
-  <name>hast_gazebo_msgs</name>
+  <name>rl_gazebo_msgs</name>
   <version>0.0.0</version>
-  <description>The hast_gazebo_msgs package</description>
+  <description>The rl_gazebo_msgs package</description>
   <maintainer email="benjamin@todo.todo">benjamin</maintainer>
   <license>TODO</license>
 
