--- a/rl_gazebo_plugins/CMakeLists.txt
+++ b/rl_gazebo_plugins/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 2.8.3)
-project(robot_plugins)
+project(rl_gazebo_plugins)
 set (CMAKE_CXX_STANDARD 11)
 
 find_package(catkin REQUIRED COMPONENTS
