--- a/rl_gazebo_plugins/package.xml
+++ b/rl_gazebo_plugins/package.xml
@@ -2,7 +2,7 @@
 <package>
   <name>rl_gazebo_plugins</name>
   <version>0.0.0</version>
-  <description>The robot_plugins package</description>
+  <description>The rl_gazebo_plugins package</description>
   <maintainer email="benjamin@todo.todo">benjamin</maintainer>
   <license>TODO</license>
 
